# rnacompete

./: .gitignore  LICENSE  README.md  pyproject.toml
rnacompete/: __init__.py  cli.py  parser.py
rnacompete/classifier/: LR_model.sav  SS_model.sav  __init__.py
rnacompete/data/: __init__.py
rnacompete/modes/: process.py  summarize.py
rnacompete/subscripts/: classifier.py  compute_kmer_zscore.py  compute_probe_zscore.py  plot.py  process_utils.py  pwm.py  summarize_utils.py
test/root/: rnacompete_metadata.tsv
test/root/HybID00025_00103_subset/: feature.tsv  summary.tsv
test/root/HybID00025_00103_subset/pwm/: HybID00025_a.txt  HybID00025_ab.txt  HybID00025_b.txt  HybID00027_a.txt  HybID00027_ab.txt  HybID00027_b.txt  HybID00032_a.txt  HybID00032_ab.txt  HybID00032_b.txt  HybID00034_a.txt  HybID00034_ab.txt  HybID00034_b.txt  HybID00052_a.txt  HybID00052_ab.txt  HybID00052_b.txt  HybID00065_a.txt  HybID00065_ab.txt  HybID00065_b.txt  HybID00073_a.txt  HybID00073_ab.txt  HybID00073_b.txt  HybID00077_a.txt  HybID00077_ab.txt  HybID00077_b.txt  HybID00080_a.txt  HybID00080_ab.txt  HybID00080_b.txt  HybID00082_a.txt  HybID00082_ab.txt  HybID00082_b.txt  HybID00083_a.txt  HybID00083_ab.txt  HybID00083_b.txt  HybID00085_a.txt  HybID00085_ab.txt  HybID00085_b.txt  HybID00088_a.txt  HybID00088_ab.txt  HybID00088_b.txt  HybID00097_a.txt  (+2 more)
test/summarize_output/: feature.tsv  summary.tsv
test/summarize_output/html/: index.html
test/summarize_output/html/HybID00025/: HybID00025.html
test/summarize_output/html/HybID00027/: HybID00027.html
(+12 files in other folders)
